--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "standard && tape test/test-*.js"
   },
   "bin": {
-    "deps": "./bin/deps3"
+    "deps3": "./bin/deps3"
   },
   "author": "Ronald Luitwieler",
   "dependencies": {
     "aws-sdk": "^2.192.0",
     "concat-stream": "^1.6.0",
     "debug": "^3.1.0",
+    "minimist": "^1.2.0",
     "semver": "^5.5.0",
     "sort-object": "^3.0.2"
   },
