--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "aws-sdk": "^2.192.0",
     "concat-stream": "^1.6.0",
     "debug": "^3.1.0",
-    "gunzip-maybe": "^1.4.1",
     "minimist": "^1.2.0",
     "proxy-agent": "^2.2.0",
     "semver": "^5.5.0",
-    "sort-object": "^3.0.2",
-    "tar-fs": "^1.16.0"
+    "sort-object": "^3.0.2"
   },
   "devDependencies": {
     "proxyquire": "^1.8.0",
